assets/components/components.css
/* FOOTER */
.fa {
    padding: 20px;
    font-size: 30px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
}

.contact-info {
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: 2 em;
  color: white;
}

footer{
  
  background-color: #1f4bbc;
}

.site-footer{
    text-align: center;
    background-color: #457ac5;
}

.social-links a {
    color: #d1caca;
    text-decoration: none;
    margin: 0 5px;
}



/* NAVBAR */
#navbar {
  margin: 0px;
  text-align: right;
  background: #3261d9f1;  
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  
  display: flex;
  flex-direction: row;
  align-items:flex-end;
  align-items: center;
  height: auto;
  max-height: 40vh;

  position: fixed;
  top: 0px;
  width: 100%;
  left: 0px;
  z-index: 10;
}


.logo {
  margin-right: auto;
  padding: 5px;
  height: 50px;
  width: 60px;
  opacity: 0;
}

/* Hamburger Button */
.dropdown .dropbtn {
  margin-right: auto;
  cursor: pointer;
  font-size: 20px;  
  border: none;
  outline: none;
  color: white;
  padding: 0px;
  background-color: transparent;
  font-family: inherit;
  margin-right: 8vw;
}

/* Allows for mobile Hamburger to work */
@media only screen and (max-width: 600px) {
  .dropdown-content {
    display: none;
    background-color: transparent;
    margin: 4vw;
  }

  .logo {
    opacity: 1;
  }

  .dropdown button {
    background: transparent;
    color:white;
    outline: none;
    border: none;
  }

}

.dropdown-content a {
  float: none;
  text-align: right;
  color: white;
  text-transform: uppercase;
  background-color: transparent;
  text-decoration: none;
  display: flex;
  padding-left: 4vw;
  padding-right: 4vw;
  padding-top: 2vh;
  padding-bottom: 2vh;
  flex-direction: column;
  justify-items:stretch;  

}


.dropdown-content a:hover {
  background-color: rgba(51, 51, 231, 0.699);
}

.show {
  display: block;
}

.none {
  display: none;
}

/* END */

/* FOR PC USERS */
@media only screen and (min-width: 600px) {
  .header {
    padding: 0.2vw;
    margin: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: auto;
    overflow: hidden;
    background: #3d72f7fa;
  }
  .dropdown-content {
    padding: 0vw;
    font-size: 1vw;
    text-transform: uppercase;
  }

  .dropdown button {
    display: none;
  }
  
  .dropdown .dropbtn {
    display: none;
  }

  .dropdown-content {
    display: flex;
  }
}

